bugfix: minor overflow bug and readme update

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -12,6 +12,7 @@ body {
     background-image: url('/images/bg-main-tablet.png');
     margin: 60px auto;
     max-width: var(--tablet);
+    overflow-x: hidden;
   }
 
   .primary-bg-pattern {
